kubernetes/talos/cluster/argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations: 
    kubernetes.io/ingress.class: internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.vandeneede.org`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argo.vandeneede.org`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
